<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.zxg.ai</groupId>
	<artifactId>light-neural-network-java</artifactId>
	<version>0.0.1-SNAPSHOT</version>

	<url>https://github.com/Xianguang-Zhou/light-neural-network-java</url>

	<licenses>
		<license>
			<name>GNU Affero General Public License v3</name>
			<url>http://www.gnu.org/licenses/agpl-3.0.txt</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>Xianguang Zhou</name>
			<email>xianguang.zhou@outlook.com</email>
		</developer>
	</developers>

	<properties>
		<jocl.version>2.3.2</jocl.version>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.jogamp.jocl</groupId>
			<artifactId>jocl-main</artifactId>
			<version>${jocl.version}</version>
		</dependency>

		<dependency>
			<groupId>org.jogamp.gluegen</groupId>
			<artifactId>gluegen-rt-main</artifactId>
			<version>${jocl.version}</version>
		</dependency>
	</dependencies>
</project>
